--- a/indeks.html
+++ b/indeks.html
@@ -7,7 +7,7 @@
 	</head>
 	<body bgcolor= #f5e0f3>
 		<header>
-			<h1>Kraków moje miasto</h1>
+			<h1>Kraków moje miasto Weronika Kwiczal</h1>
 		</header>
 		<main>
 		<p>
